code improvement
git-svn-id: http://svn.intranet.ydp/ydp/projects/empiria/utils/ydpgwtutils/trunk@134583 3e83ccf1-c6ce-0310-9054-8fdb33cf0640